@@ -10,7 +10,7 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.net.URL;
+import java.net.URI;
 
 import javax.imageio.ImageIO;
 import javax.imageio.stream.MemoryCacheImageInputStream;
@@ -197,13 +197,13 @@ public class PicoWebServerTest {
 
 		response = httpPostJson("/render", renderRequestJson("@startuml", "-ttxt"));
 		assert response.getResponseCode() == 200;
-		assert response.getHeaderField("X-PlantUML-Diagram-Error").equals("No @startuml/@enduml found");
+		assert response.getHeaderField("X-PlantUML-Diagram-Error").equals("No valid @start/@end found, please check the version");
 		assert response.getHeaderField("X-PlantUML-Diagram-Error-Line").equals("0");
 		assert response.getContentType().equals("text/plain");
 		assert readStreamAsString(response.getInputStream()).equals("" +
 				"                               \n" +
 				"                               \n" +
-				"     No @startuml/@enduml found\n"
+				"     No valid @start/@end found, please check the version\n"
 		);
 
 		response = httpPostJson("/render", "");
@@ -310,7 +310,7 @@ public class PicoWebServerTest {
 	}
 
 	private static HttpURLConnection urlConnection(String path) throws Exception {
-		final HttpURLConnection conn = (HttpURLConnection) new URL("http://localhost:" + port + path).openConnection();
+		final HttpURLConnection conn = (HttpURLConnection) new URI("http://localhost:" + port + path).toURL().openConnection();
 		conn.setInstanceFollowRedirects(false);
 		return conn;
 	}
